--- a/microservice-kafka/microservice-kafka-order/src/main/resources/application.properties
+++ b/microservice-kafka/microservice-kafka-order/src/main/resources/application.properties
@@ -10,3 +10,10 @@ spring.datasource.url=jdbc:postgresql://postgres/dborder
 spring.datasource.username=dbuser
 spring.datasource.password=dbpass
 spring.datasource.driver-class-name=org.postgresql.Driver
+#added by zbli
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
+logging.level.org.springframework.web: TRACE
+logging.level.org.hibernate: TRACE
+logging.level.*: TRACE
+logging.file=/order.log
+
